# crazyswarm2

./: .gitignore  .gitmodules  installation.html  known_issues.md  output.txt  output2.txt  overview.html  searchindex.js  tmp_motion_capture.yaml  tmp_server.yaml
crazyflie/config/: config.rviz  crazyflies.yaml  motion_capture.yaml  server.yaml  teleop.yaml
crazyflie/launch/: launch.py
crazyflie/scripts/: crazyflie_server.py
crazyflie/src/: teleop.cpp
crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: cmd_vel_test.py  figure8.py  figure8_vert.py  hover.py  hover_cmdVel.py  test_feedback_control.py
crazyflie_examples/log/: latest_build
crazyflie_py/crazyflie_py/: __init__.py  crazyflie.py  feedback_control.py  feedback_control_fig8.py  feedback_control_hopf.py
crazyflie_pybullet/: CMakeLists.txt  package.xml  setup.cfg
crazyflie_pybullet/crazyflie_pybullet/: crazyflie_pybullet_server.py
crazyflie_pybullet/crazyflie_pybullet/backend/: CTBRWrapper.py  SASAviary.py
crazyflie_sim/: README.md
crazyflie_sim/crazyflie_sim/: crazyflie_server.py  crazyflie_sil.py
crazyflie_sim/crazyflie_sim/backend/: custom.py  dynobench.py  neuralswarm.py  none.py  np.py  pinocchio.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crazyflie/lib/crazyflie/: aideck_streamer.py  battery  cfmult.py  chooser.py  comCheck  console  crazyflie_server  crazyflie_server.py  downloadUSDLogfile  flash.py  gui.py  listLogVariables  listMemories  listParams  log  reboot  scan  setParam  simple_mapper_multiranger.py  teleop  vel_mux.py  version
install/crazyflie/share/crazyflie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/crazyflie_examples/lib/crazyflie_examples/: cmd_full_state  figure8  (+12 more)
log/: latest_build
read_bags/: read.py
rosbag2_2024_04_18-13_39_28/: metadata.yaml  rosbag2_2024_04_18-13_39_28_0.db3
(+504 files in other folders)
