[options.entry_points]
console_scripts =
    feedback_control = crazyflie_examples.test_feedback_control:main
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    hover = crazyflie_examples.hover:main
    hover_cmdVel = crazyflie_examples.hover_cmdVel:main
    cmd_vel_test= crazyflie_examples.cmd_vel_test:main
    figure8_vert = crazyflie_examples.figure8_vert:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
